--- a/style.css
+++ b/style.css
@@ -26,13 +26,13 @@ body {
 }
 
 .background1 {
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/assets/img/bg1.jpg');
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/bg1.jpg');
   box-sizing: border-box;
   background-size: cover;
 }
 
 .background2 {
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/assets/img/bg2.png');
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/bg2.png');
   box-sizing: border-box;
   background-size: cover;
 }
@@ -169,7 +169,7 @@ body {
   font-size: 15px;
 }
 
-.notif-wa img {
+.notif-wa {
   width: 25px;
   box-sizing: border-box;
   height: auto;
